#SET(CMAKE_VERBOSE_MAKEFILE on)
#SET(CMAKE_CXX_COMPILER g++)
#SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -Wall -g3")
#SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall")

SET(CMAKE_BUILD_TYPE Debug)

#ADD_SUBDIRECTORY(util)
#ADD_SUBDIRECTORY(main)
#ADD_SUBDIRECTORY(net)
#ADD_SUBDIRECTORY(block)
#ADD_SUBDIRECTORY(multiplex)
ADD_SUBDIRECTORY(test)
