SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
SET(CMAKE_VERBOSE_MAKEFILE on)
SET(CMAKE_CXX_COMPILER g++)
#SET(CMAKE_CXX_FLAGS_DEBUG "-g3 -Wall")
#SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -Wall -g3")
SET(CMAKE_CXX_FLAGS_DEBUG "-O3 -Wall ")

AUX_SOURCE_DIRECTORY(. TINY_XML_SRC_LIST)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/common/tiny_xml)
ADD_LIBRARY(tinyxml STATIC ${TINY_XML_SRC_LIST})
