SET(EXECUTABLE_OUTPUT_PATH ${HELLO_SOURCE_DIR}/bin)
#SET(SRC_LIST main.cpp)
SET(CMAKE_VERBOSE_MAKEFILE on)
SET(CMAKE_CXX_COMPILER g++)
#SET(CMAKE_CXX_FLAGS_DEBUG "-g3 -Walal")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -Wall -g3")

AUX_SOURCE_DIRECTORY(. SRC_LIST)

INCLUDE_DIRECTORIES(${HELLO_SOURCE_DIR}/include)
#INCLUDE_DIRECTORIES(.)

LINK_DIRECTORIES(${HELLO_SOURCE_DIR}/lib)

ADD_EXECUTABLE(mempool ${SRC_LIST})
TARGET_LINK_LIBRARIES(mempool util)
