SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
#SET(SRC_LIST main.cpp)
SET(CMAKE_VERBOSE_MAKEFILE on)
SET(CMAKE_CXX_COMPILER g++)
#SET(CMAKE_CXX_FLAGS_DEBUG "-g3 -Walal")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -Wall -g3")

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/common/base SRC_LIST)
AUX_SOURCE_DIRECTORY(. SRC_LIST)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/common/base)

ADD_EXECUTABLE(test ${SRC_LIST})
