SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
SET(CMAKE_VERBOSE_MAKEFILE on)
SET(CMAKE_CXX_COMPILER g++)
#SET(CMAKE_CXX_FLAGS_DEBUG "-g3 -Wall")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -Wall -g3")

AUX_SOURCE_DIRECTORY(. SRC_LIST)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
ADD_LIBRARY(util STATIC ${SRC_LIST})
