SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
#SET(SRC_LIST main.cpp)
SET(CMAKE_VERBOSE_MAKEFILE on)
SET(CMAKE_CXX_COMPILER g++)
#SET(CMAKE_CXX_FLAGS_DEBUG "-g3 -Walal")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -Wall -g3")

AUX_SOURCE_DIRECTORY(. SRC_LIST)
#AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/common SRC_LIST)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/common/ipc SRC_LIST)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/common/net_reactor SRC_LIST)
#AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/common/thread SRC_LIST)
#AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/common/time SRC_LIST)
AUX_SOURCE_DIRECTORY(. SRC_LIST)

#INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
#INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/common)
#INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/common/time)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/common/ipc)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/common/net_reactor)
#INCLUDE_DIRECTORIES(/home/qf/workspace/gitPro/protobuf/protobuf/src/google/protobuf)
#INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/common/thread)
#INCLUDE_DIRECTORIES(.)

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
#$LINK_DIRECTORIES(/usr/local/lib)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib/google/protobuf)

ADD_EXECUTABLE(MIOCli-1 ${SRC_LIST})
TARGET_LINK_LIBRARIES(MIOCli-1 tinyxml.a)
TARGET_LINK_LIBRARIES(MIOCli-1 pthread)
TARGET_LINK_LIBRARIES(MIOCli-1 protobuf.a)
#TARGET_LINK_LIBRARIES(BlockIO util)
